# HEALTH_HACKS___health_case_hacksai

./: .env.example  .gitignore  README.md
.github/: workflows
backend/: Dockerfile  pyproject.toml  settings.py
backend/src/: asgi.py  parser.py  settings.py
backend/src/common/db/models/: base_model.py
backend/src/common/db/repositories/: base_repository.py
backend/src/common/db/types/: pydantic_object_id.py
backend/src/db/models/: base_model.py  city_area.py  city_info.py  object_density.py  osm_objects.py
backend/src/db/models/city/: city_model.py  density.py  district.py
backend/src/db/repositories/: base_repository.py  city.py  city_area.py  city_info.py  object_density.py  osm_objects.py
backend/src/db/types/: pydantic_object_id.py
backend/src/depends/: city.py
backend/src/misc/: gis_distance.py
backend/src/misc/db/: areas.json  areas_by_hacked_city.json  areas_hack.json  migrate.py
backend/src/misc/db/utils/: insert_elements.py  parse_elements.py
backend/src/misc/gis/: distance.py  dto.py  polygons.py
backend/src/misc/migrator/: executor.py  parser.py
backend/src/misc/migrator/files/: areas.json
backend/src/misc/migrator/pipelines/: dencities.py  osm_object.py
backend/src/routers/: __init__.py
backend/src/routers/v1/: __init__.py  cities.py  districts.py  gis.py  metrics.py  recs.py  status.py
backend/src/schemas/v1/: base.py  cities.py  districts.py  gis.py  metrics.py  recs.py
backend/src/services/: metrics.py  osm.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+17 files in other folders)
