[tool.poetry]
name = "city-health-case"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.1"
uvicorn = "^0.22.0"
pydantic-settings = "2.0.3"
osmpythontools = "^0.3.5"
motor = "^3.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.6.0"
ruff = "^0.0.277"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 89
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.ruff]
select = ["A", "B", "E", "F", "W", "I", "C90", "COM", "N", "UP", "YTT", "ASYNC", "S", "RUF", "FLY", "TRY", "PL"]
ignore = ["A002", "A003", "S101", "S104", "PLR0913", "RUF012"]
line-length = 89
target-version = "py311"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]
